Dave Dev/src/objects/Synced_Cell__c.object
<CustomObject>
    <description>By nominating a worksheet and cell reference, a user can sync data from workbook to sf, and sf back to workbook.</description>
    <fields>
        <fullName>Cell_Value__c</fullName>
        <inlineHelpText>To sync a cell you must describe its location exactly, in the format of [sheetname]![column reference]:[row reference] eg. cell A1 on &apos;Sheet 1&apos; would be entered as follows - Sheet 1!A:1</inlineHelpText>
        <label>Cell Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook__c</fullName>
        <label>Workbook</label>
        <referenceTo>Workbook__c</referenceTo>
        <relationshipLabel>Synced Cells</relationshipLabel>
        <relationshipName>Synced_Cells</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>force_refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, forces trigger to refresh cell value</description>
        <label>force refresh</label>
        <type>Checkbox</type>
    </fields>
    <label>Synced Cell</label>
    <nameField>
        <label>Synced Cell</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Synced Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>